# Spectral-AI

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LEARNINGS.md  MEJORAS.md  README.md  ROADMAP.md  STATUS.md  build_optix_win.bat  eval_hellaswag_16layer_results.json  eval_hellaswag_3layer_results.json  ivrqrgmado7pggpmnboo2uefoak1pfjn.darc  ljocbcib02pskb0qklm3amrolrkmvhmq  manifest  pyproject.toml  requirements.txt  run_tests_win.bat  sweep_prefilter_perlayer_results.json
.beads/: config.yaml  issues.jsonl  metadata.json
cuda/: async_pipeline.cu  miss.cu  optix_host.cpp  optix_router_hitgroup.cu  optix_router_host.cpp  optix_router_raygen.cu  ray_attention.cu  ray_generation.cu
data/: gpt2_baseline_log.json  inception_training_log.json
docs/: BENCHMARK_TEORICO.md  CUDA_BVH_ROUTER.md  HANDOFF_SESSION_2026_03_29.md  MEMORY_BREAKTHROUGH.md
include/: alpha_bsh.h  optical_attention.h  semantic_bvh.h  token_geometry.h
paper/: spectral_ai_zero_matrix.md
patents/: patent_01_rt_attention.md  patent_02_inception_engine.md  patent_03_spectral_routing.md
python/: analyze_experts.py  analyze_experts_multi.py  async_pipeline_bridge.py  benchmark_cuda_e2e.py  benchmark_cuda_pipeline.py  benchmark_e2e_final.py  benchmark_expert_types.py  benchmark_optix_latency.py  benchmark_routing_backends.py  benchmark_scaling.py  bvh_cuda_benchmark.py  bvh_cuda_benchmark_v2.py  bvh_cuda_benchmark_v3.py  bvh_router.py  bvh_router_bridge.py  calibrate_router.py  compare_expert_findings.py  dump_bvh_router_reference.py  eval_hellaswag.py  eval_polysemy.py  (+37 more)
(+102 files in other folders)
